revert all changes that deal with flickering issue -- didn't work

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,3 @@
-body {
-  /* Hide everything until the page is fully loaded */
-  visibility:hidden;
-}
-
 a {
   text-decoration: none !important;
 }
